[gd_scene load_steps=14 format=3 uid="uid://ds57yxa7g8e0g"]

[ext_resource type="Script" uid="uid://taw55627j3vx" path="res://scripts/sripts_for_main_menu/main_menu.gd" id="1_ln5vx"]
[ext_resource type="Texture2D" uid="uid://b5g7tukpbk7rb" path="res://resourse/data for the main menu/background.png" id="2_l71uw"]
[ext_resource type="FontFile" uid="uid://8a5ad5bw24y" path="res://resourse/data for the main menu/ZenterSPDemo-Black.otf" id="3_rpcbn"]
[ext_resource type="Script" uid="uid://bhdo47vhwhw1" path="res://scripts/sripts_for_main_menu/audio_control.gd" id="5_jqcpt"]
[ext_resource type="Script" uid="uid://biy416fhwhoaf" path="res://scripts/sripts_for_main_menu/fullscreen_control.gd" id="6_e4psr"]
[ext_resource type="Script" uid="uid://cx4855a2ald1l" path="res://scripts/sripts_for_main_menu/scale_control.gd" id="7_vwpwm"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7vrkn"]
texture = ExtResource("2_l71uw")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rhts7"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 8
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7vrkn"]
bg_color = Color(0.5132329, 0.5132329, 0.5132329, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 8
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fu7sn"]
bg_color = Color(0.74138474, 0.7413847, 0.74138457, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 8
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7vrkn"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_jix8l"]
color = Color(1, 1, 1, 0)
thickness = 6

[sub_resource type="StyleBoxLine" id="StyleBoxLine_glbon"]
color = Color(1, 1, 1, 1)
thickness = 6

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ln5vx")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_7vrkn")

[node name="MainButton" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3550347
anchor_top = 0.41203704
anchor_right = 0.62717015
anchor_bottom = 0.82330245
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 14
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="MainButton"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_rpcbn")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/hover = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
text = "В БОЙ!"

[node name="Button2" type="Button" parent="MainButton"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_rpcbn")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/hover = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
text = "НАСТРОЙКИ
"

[node name="Button3" type="Button" parent="MainButton"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_rpcbn")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/hover = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
text = "ВЫЙТИ"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -421.0
offset_top = -255.0
offset_right = 425.0
offset_bottom = -147.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 3
theme_override_constants/paragraph_spacing = 1
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("3_rpcbn")
theme_override_font_sizes/font_size = 66
text = "HOLD THE PANCH"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Options" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.21093753
anchor_top = 0.3611111
anchor_right = 0.7890625
anchor_bottom = 0.88734573
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Back" type="Button" parent="Options"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -107.0
offset_top = -61.0
offset_right = 107.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_rpcbn")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/hover = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
text = "назад"

[node name="Label" type="Label" parent="Options"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -228.0
offset_top = 16.0
offset_right = 193.0
offset_bottom = 72.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_rpcbn")
theme_override_font_sizes/font_size = 30
text = "НАСТРОЙКИ"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -341.00003
offset_top = -83.44446
offset_right = 327.0
offset_bottom = 96.55554
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 31

[node name="HBoxContainer" type="HBoxContainer" parent="Options/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Options/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_rpcbn")
text = "Громкость музыки:"

[node name="AudioControl" type="HSlider" parent="Options/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/slider = SubResource("StyleBoxLine_jix8l")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_glbon")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_glbon")
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("5_jqcpt")
audio_bus_name = "Music"

[node name="FullscreenControl" type="CheckButton" parent="Options/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_rpcbn")
theme_override_font_sizes/font_size = 16
button_pressed = true
text = "Полноэкранный режим:"
script = ExtResource("6_e4psr")

[node name="HBoxContainer2" type="HBoxContainer" parent="Options/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 425

[node name="Label" type="Label" parent="Options/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_rpcbn")
text = "3D-качество:"

[node name="ScaleControl" type="OptionButton" parent="Options/VBoxContainer/HBoxContainer2"]
layout_mode = 2
selected = 0
item_count = 4
popup/item_0/text = "100%"
popup/item_0/id = 0
popup/item_1/text = "75%"
popup/item_1/id = 1
popup/item_2/text = "50%"
popup/item_2/id = 2
popup/item_3/text = "25%"
popup/item_3/id = 3
script = ExtResource("7_vwpwm")

[connection signal="pressed" from="MainButton/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MainButton/Button2" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MainButton/Button3" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Options/Back" to="." method="_on_back_options_pressed"]
[connection signal="value_changed" from="Options/VBoxContainer/HBoxContainer/AudioControl" to="Options/VBoxContainer/HBoxContainer/AudioControl" method="_on_value_changed"]
[connection signal="toggled" from="Options/VBoxContainer/FullscreenControl" to="Options/VBoxContainer/FullscreenControl" method="_on_toggled"]
[connection signal="item_selected" from="Options/VBoxContainer/HBoxContainer2/ScaleControl" to="Options/VBoxContainer/HBoxContainer2/ScaleControl" method="_on_item_selected"]
